usermanagement/resources/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: practise
  labels:
    istio-injection: enabled
