usermanagement/resources/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-management-vsvc
spec:
  hosts:
    - "*"
  gateways:
    - user-gateway
  http:
    - match:
        - uri:
            prefix: /login
      route:
        - destination:
            host: login
            subset: v1
          weight: 50
        - destination:
            host: login
            subset: v2
          weight: 50
    #            port:
    #              number: 9080
    - match:
        - uri:
            prefix: /dashboard
      route:
        - destination:
            host: dashboard
            subset: v1
          weight: 50
        - destination:
            host: dashboard
            subset: v2
          weight: 50
#            port:
#              number: 9080
